# api.etml.burkhalter.dev

./: .env.sample  .gitignore  Dockerfile  README.md  database.sample.toml  database.toml  docker-compose.yml  piccolo_conf.py  pyproject.toml
.github/workflows/: docker-hub.yml
app/: cli.py  data.py  main.py  models.py  piccolo_app.py  utils.py
app/config/: settings.sample.toml
app/piccolo_migrations/: app_2023_02_27t02_01_00_803318.py  app_2023_03_05t22_00_27_037018.py  app_2023_03_11t16_18_04_140226.py  app_2023_03_12t08_46_36_229921.py  app_2023_03_25t09_49_14_289163.py  app_2023_04_04t20_27_20_932451.py  app_2023_05_01t07_40_37_375681.py  app_2023_05_07t10_59_06_275729.py
app/schemas/: __init__.py  agenda.py  auth.py  gradebook.py  schema_types.py  school.py  types.py  user.py
config/: settings.sample.toml
docs/: data-model.drawio  mld.drawio
