[tool.poetry]
name = "etml-api"
version = "0.1.0"
description = ""
authors = ["Yannis Burkhalter <yannis@burkhalter.dev>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
piccolo = {extras = ["sqlite"], version = "^1.1"}
strawberry-graphql = {extras = ["asgi"], version = "^0.199"}
uvicorn = "^0.20"
pyjwt = "^2.6"
python-dotenv = "^1.0"

[tool.poetry.scripts]
start = "app.main:start"
init = "app.cli:init"
grant = "app.cli:grant"
ungrant = "app.cli:ungrant"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
